fix: prevent category text overflow on mobile

--- a/src/features/CatalogTabs/contents/contents.module.scss
+++ b/src/features/CatalogTabs/contents/contents.module.scss
@@ -8,6 +8,10 @@
   li:hover {
     color: var(--accent-color);
   }
+
+  @include media-max-mobile-s {
+    white-space: break-spaces;
+  }
 }
 
 .brands {
